# rag-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
src/: chunking.py  embedding.py  generate.py  retrieval.py  storage.py
