[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "A hand-rolled RAG system over personal writing. No frameworks."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
